--- a/html_projkt_wael_zobani/index.html
+++ b/html_projkt_wael_zobani/index.html
@@ -25,4 +25,42 @@
 	  		</ul>
 	</nav>
 	<!-- Ende navigation-->
-
+	<section></section>
+	<!--slider Start-->
+	
+	 <div class="slidershows kbbz">
+	
+		  <div class="slides">
+			<input type="radio" name="r" id="r1" checked>
+			<input type="radio" name="r" id="r2">
+			<input type="radio" name="r" id="r3">
+			<input type="radio" name="r" id="r4">
+			<input type="radio" name="r" id="r5">
+			<div class="slide s1">
+			  <img src="img/slide.jpg" >
+			</div>
+			<div class="slide">
+			  <img src="img/slide1.jpg" >
+			</div>
+			<div class="slide">
+			  <img src="img/slide2.jpg" >
+			</div>
+			<div class="slide">
+			  <img src="img/slide3.png" >
+			</div>
+			<div class="slide">
+			  <img src="img/slide4.png" >
+			</div>
+		  </div>
+	
+		  <div class="navigations">
+			<label for="r1" class="soa"></label>
+			<label for="r2" class="soa"></label>
+			<label for="r3" class="soa"></label>
+			<label for="r4" class="soa"></label>
+			<label for="r5" class="soa"></label>
+		  </div>
+		</div>
+	
+	<!--slider End-->
+	
