--- a/html_projkt_wael_zobani/index.html
+++ b/html_projkt_wael_zobani/index.html
@@ -64,3 +64,22 @@
 	
 	<!--slider End-->
 	
+<!--Haupt Start-->
+
+<div class="foo"> unsere service</div>
+<div class="Themen">
+		<a href="https://comotech.de/index.php/unternehmen"><img src="img/unternehmen.jpg" width="300px"></a>
+		<a href="https://comotech.de/index.php/unternehmen"><img src="img/Leistungen.jpg" width="250px"></a>
+		<a href="https://comotech.de/index.php/unternehmen"><img src="img/Download.jpg" width="240px"></a>
+		<a href="https://comotech.de/index.php/unternehmen"><img src="img/Qualität.jpg" width="400px" height="200px"></a>
+		<a href="https://comotech.de/index.php/unternehmen"><img src="img/comotech_.jpg" width="240px"  height="200px"></a>
+</div>
+
+	<div class="foo">wir sind Partner von:</div>
+	<a href="http://qualisteelcoat.net"><img src="img/Qualisteel-label.jpg" width="200px" ></a>
+	<a href="http://www.qib-online.de/"><img src=" img/QIB.png"width="130px">   </a>	
+	<a href="http://www.ifo-gmbh.de/home/"><img src="img/ifo_logo.png"width="250px"></a>	
+	<a href="http://www.zinq.com/index.php"><img src="img/gvn.png"width="250px"></a>	
+	<a href="https://de-de.facebook.com/Comotech-GmbH-Color-und-Montagetechnik-437819256406413/"><img src="img/facebook-logo-png-38371.jpg"width="250px"></a>	
+	
+<!--Haupt End-->
