--- a/html_projkt_wael_zobani/index.html
+++ b/html_projkt_wael_zobani/index.html
@@ -83,3 +83,48 @@
 	<a href="https://de-de.facebook.com/Comotech-GmbH-Color-und-Montagetechnik-437819256406413/"><img src="img/facebook-logo-png-38371.jpg"width="250px"></a>	
 	
 <!--Haupt End-->
+
+<!--footer start-->
+
+<footer class="footer">
+	<div class="footer1">
+		<div class="footer2">
+			<div class="footer3">
+				<h4>4tech.de</h4>
+				<ul>
+					<li><a href="#">Angebote</a></li>
+					<li><a href="#">Prospekte</a></li>
+					<li><a href="#">Rezeptsuche</a></li>
+					<li><a href="#">Sitemap</a></li>
+				</ul>
+			</div>
+			<div class="footer3">
+				<h4>Service</h4>
+				<ul>
+					<li><a href="#">4tech App</a></li>
+					<li><a href="#">4tech Newsletter</a></li>
+					<li><a href="#">Produktinformation</a></li>
+					<li><a href="#">Kundenfeedback</a></li>
+					<li><a href="#">Häufige Fragen</a></li>
+				</ul>
+			</div>
+			<div class="footer3">
+				<h4>Unternehmen</h4>
+				<ul>
+					<li><a href="#">Unsere Werte</a></li>
+					<li><a href="#">Auszeichnungen</a></li>
+					<li><a href="#">Kontakt</a></li>
+					<li><a href="#">Presse</a></li>
+				 <li><a href="#">Made by Wael Zobani</a></li>
+				</ul>
+			</div>
+
+		</div>
+	</footer>
+  <!--footer Ende-->
+  
+  
+  
+  
+  </body>
+  </html>
