--- a/html_projkt_wael_zobani/index.html
+++ b/html_projkt_wael_zobani/index.html
@@ -119,6 +119,19 @@
 				</ul>
 			</div>
 
+			<div class="footer3">
+				<h4>Social Media</h4>
+				<div class="social-links">
+
+				 <a href="https://github.com/wael993" class="fa fa-facebook"></a>
+				 <a href="https://github.com/wael993" class="fa fa-twitter"></a>
+				 <a href="https://github.com/wael993" class="fa fa-google"></a>
+				 <a href="https://github.com/wael993" class="fa fa-linkedin"></a>
+				 <a href="https://github.com/wael993" class="fa fa-youtube"></a>
+				 <a href="https://github.com/wael993" class="fa fa-instagram"></a>
+
+			 </div>
+			</div>
 		</div>
 	</footer>
   <!--footer Ende-->
