--- a/html_projkt_wael_zobani/index.html
+++ b/html_projkt_wael_zobani/index.html
@@ -8,6 +8,41 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://kit.fontawesome.com/a076d05399.js" ></script>
 
+	<style>
+
+
+		.fa:hover {
+			opacity: 0.7;
+		}
+		.fa-facebook {
+		  background: #3B5998;
+		  color: white;
+		}
+		
+		.fa-twitter {
+		  background: #55ACEE;
+		  color: white;
+		}
+		
+		.fa-google {
+		  background: #dd4b39;
+		  color: white;
+		}
+		
+		.fa-linkedin {
+		  background: #007bb5;
+		  color: white;
+		}
+		
+		.fa-youtube {
+		  background: #bb0000;
+		  color: white;
+		}
+		
+		.fa-instagram {
+		  background: #125688;
+		  color: white;
+		</style>
 </head>
 <body>
 	<!-- Start navigation-->
