Building error fix

--- a/html_projkt_wael_zobani/index.html
+++ b/html_projkt_wael_zobani/index.html
@@ -41,8 +41,8 @@
 		
 		.fa-instagram {
 		  background: #125688;
-		  color: white;
-		</style>
+		  color: white;}
+	</style>
 </head>
 <body>
 	<!-- Start navigation-->
@@ -165,7 +165,8 @@
 				 <a href="https://github.com/wael993" class="fa fa-youtube"></a>
 				 <a href="https://github.com/wael993" class="fa fa-instagram"></a>
 
-			 </div>
+				</div>
+			</div>
 			</div>
 		</div>
 	</footer>
